--- a/index.html
+++ b/index.html
@@ -284,6 +284,22 @@
     			  </div>
     			</div>
     		</div>
+    		<div class="footer__last">
+    			<div class="footer-container">
+    				<div class="footer-info">
+    				  <span>(c) 2020 OJJO jewelry</span>
+    			  </div>
+    			  <div class="footer-info">
+    				  <span>Договор публичной офферты</span>
+    			  </div>
+    			  <div class="footer-info">
+    			  	<span>Контрагентам</span>
+    			  </div>
+    			  <div class="footer-info">
+    			  	<span>Контрагентам</span>
+    			  </div>
+    			</div>
+    		</div>
     	</div>
     </footer>
   </body>
